<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DialogFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dialog_fragment_title"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dialog_fragment_hint"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:textSize="22dp"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_fragment_nickname_hint"
        android:layout_marginHorizontal="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_fragment_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_fragment_button"
        android:text="@string/dialog_fragment_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:textSize="15dp"
        style="@style/ButtonView"/>

</LinearLayout>