<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">
    <TextView
        android:id="@+id/quiz_text_counter_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_counter_text"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/quiz_text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="10dp"
        android:src="@drawable/ic_exit"
        android:tooltipText="@string/quiz_exit_button" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_hint"
            android:textSize="15dp"
            style="@style/QuestionTextView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_top_left_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:textSize="15dp"
                style="@style/ButtonView"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_top_right_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                style="@style/ButtonView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_bottom_left_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:textSize="15dp"
                style="@style/ButtonView"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_bottom_right_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                style="@style/ButtonView"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>